--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
       var sportDays = document.getElementById("sportDays").value;
       var highProtein = document.getElementById("highProtein").value;
 
-      var message = '👤 الاسم: ' + name + '%0A⚖️ الوزن: ' + weight + ' كجم%0A📏 الطول: ' + height + ' سم%0A🎂 العمر: ' + age + '%0A🚻 الجنس: ' + gender + '%0A📌 الحالة: ' + status + '%0A💼 المهنة: ' + job + '%0A🏋️‍♂️ يمارس الرياضة: ' + sport;
+      var message = '👤 الاسم: ' + name + '\n⚖️ الوزن: ' + weight + ' كجم' + '\n📏 الطول: ' + height + ' سم' + '\n🎂 العمر: ' + age + '\n🚻 الجنس: ' + gender + '\n📌 الحالة: ' + status + '\n💼 المهنة: ' + job + '\n🏋️‍♂️ يمارس الرياضة: ' + sport;
       if (sport === 'نعم') {
-        message += '%0A⚽ نوع الرياضة: ' + sportType;
+        message += '\n⚽ نوع الرياضة: ' + sportType;
       }
-      message += '%0A🍽️ عدد الوجبات: ' + meals;
-      message += '%0A🥛 تفضيل منتجات الحليب: ' + dairy;
-      message += '%0A📅 أيام ممارسة الرياضة في الأسبوع: ' + sportDays;
-      message += '%0A🥩 تفضيل بروتين ولحوم عالي: ' + highProtein;
+      message += '\n🍽️ عدد الوجبات: ' + meals;
+      message += '\n🥛 تفضيل منتجات الحليب: ' + dairy;
+      message += '\n📅 أيام ممارسة الرياضة في الأسبوع: ' + sportDays;
+      message += '\n🥩 تفضيل بروتين ولحوم عالي: ' + highProtein;
 
       var phoneNumber = '201127909244';
       var whatsappURL = 'https://wa.me/' + phoneNumber + '?text=' + encodeURIComponent(message);
